--- a/shipstats/templates/shipstats/compare.html
+++ b/shipstats/templates/shipstats/compare.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
+
 {% load static %}
 <head>
-    <title>Compare Relative Ship Winrates</title>
-        <meta charset="utf-8">
-        <link href="{% static 'plotstyle.css' %}" rel="stylesheet">
-        <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-		<script src="https://d3js.org/d3.v5.min.js"></script>      	
+	<title>Compare Relative Ship Winrates</title>
+	<meta charset="utf-8">
+	<link href="{% static 'plotstyle.css' %}" rel="stylesheet">
+	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+	<script src="https://d3js.org/d3.v4.min.js"></script>
 </head>
 <body>
 	<table>
